fluxcd/apps/overlays/production/openspeedtest/service-openspeedtest-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  labels:
    policy.prplanit.com/ingress: "true"
