fluxcd/apps/overlays/production/openspeedtest/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  annotations:
    lbipam.cilium.io/ips: "172.22.30.122"
    lbipam.cilium.io/sharing-key: "compass"
spec:
  type: LoadBalancer
