fluxcd/apps/overlays/production/openspeedtest/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openspeedtest-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "DNS & Network (Compass🧭)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "speedtest.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openspeedtest
          port: 3000
